@@ -578,7 +578,8 @@ following image formats are supported:
 @item Tiertex Limited SEQ video  @tab     @tab  X
     @tab Codec used in DOS CD-ROM FlashBack game.
 @item Ut Video               @tab     @tab  X
-@item V210 Quicktime Uncompressed 4:2:2 10-bit     @tab  X  @tab  X
+@item v210 QuickTime uncompressed 4:2:2 10-bit     @tab  X  @tab  X
+@item v410 QuickTime uncompressed 4:4:4 10-bit     @tab  X  @tab  X
 @item VBLE Lossless Codec    @tab     @tab  X
 @item VMware Screen Codec / VMware Video  @tab     @tab  X
     @tab Codec used in videos captured by VMware.
