@@ -1,0 +1,113 @@
+/*
+ * v410 decoder
+ *
+ * Copyright (c) 2011 Derek Buitenhuis
+ *
+ * This file is part of Libav.
+ *
+ * Libav is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * Libav is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with Libav; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ */
+
+#include "avcodec.h"
+#include "get_bits.h"
+
+static av_cold int v410_decode_init(AVCodecContext *avctx)
+{
+    avctx->pix_fmt             = PIX_FMT_YUV444P10;
+    avctx->bits_per_raw_sample = 10;
+
+    if (avctx->width & 1) {
+        av_log(avctx, AV_LOG_ERROR, "v410 requires even width.\n");
+        return AVERROR_INVALIDDATA;
+    }
+
+    avctx->coded_frame = avcodec_alloc_frame();
+
+    if (!avctx->coded_frame) {
+        av_log(avctx, AV_LOG_ERROR, "Could not allocate frame.\n");
+        return AVERROR(ENOMEM);
+    }
+
+    return 0;
+}
+
+static int v410_decode_frame(AVCodecContext *avctx, void *data,
+                             int *data_size, AVPacket *avpkt)
+{
+    AVFrame *pic = avctx->coded_frame;
+    uint8_t *src = avpkt->data;
+    uint16_t *y, *u, *v;
+    uint32_t val;
+    int i, j;
+
+    if (pic->data[0])
+        avctx->release_buffer(avctx, pic);
+
+    pic->reference = 0;
+
+    if (avctx->get_buffer(avctx, pic) < 0) {
+        av_log(avctx, AV_LOG_ERROR, "Could not allocate buffer.\n");
+        return AVERROR(ENOMEM);
+    }
+
+    pic->key_frame = 1;
+    pic->pict_type = FF_I_TYPE;
+
+    y = (uint16_t *)pic->data[0];
+    u = (uint16_t *)pic->data[1];
+    v = (uint16_t *)pic->data[2];
+
+    for (i = 0; i < avctx->height; i++) {
+        for (j = 0; j < avctx->width; j++) {
+            val = AV_RL32(src);
+
+            u[j] = (val >>  2) & 0x3FF;
+            y[j] = (val >> 12) & 0x3FF;
+            v[j] = (val >> 22);
+
+            src += 4;
+        }
+
+        y += pic->linesize[0] >> 1;
+        u += pic->linesize[1] >> 1;
+        v += pic->linesize[2] >> 1;
+    }
+
+    *data_size = sizeof(AVFrame);
+    *(AVFrame *)data = *pic;
+
+    return avpkt->size;
+}
+
+static av_cold int v410_decode_close(AVCodecContext *avctx)
+{
+    if (avctx->coded_frame->data[0])
+        avctx->release_buffer(avctx, avctx->coded_frame);
+
+    av_freep(&avctx->coded_frame);
+
+    return 0;
+}
+
+AVCodec ff_v410_decoder = {
+    .name         = "v410",
+    .type         = AVMEDIA_TYPE_VIDEO,
+    .id           = CODEC_ID_V410,
+    .init         = v410_decode_init,
+    .decode       = v410_decode_frame,
+    .close        = v410_decode_close,
+    .capabilities = CODEC_CAP_DR1,
+    .long_name    = NULL_IF_CONFIG_SMALL("Uncompressed 4:4:4 10-bit"),
+};
